Rewrite the plugin using standard `javax.tools` API instead of Plexus. Other aspects that are rewritten include incremental build mechanism and how the overwriting of `module-info.java` in tests is handled. For details and impact on users, see pull request description at https://github.com/apache/maven-compiler-plugin/pull/271