@@ -22,19 +22,13 @@ import java.io.File;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
-import org.apache.maven.api.Artifact;
 import org.apache.maven.api.PathScope;
 import org.apache.maven.api.Project;
 import org.apache.maven.api.Session;
@@ -44,13 +38,12 @@ import org.apache.maven.api.di.Singleton;
 import org.apache.maven.api.model.Build;
 import org.apache.maven.api.model.Model;
 import org.apache.maven.api.plugin.Log;
-import org.apache.maven.api.plugin.Mojo;
 import org.apache.maven.api.plugin.testing.Basedir;
 import org.apache.maven.api.plugin.testing.InjectMojo;
 import org.apache.maven.api.plugin.testing.MojoExtension;
 import org.apache.maven.api.plugin.testing.MojoParameter;
 import org.apache.maven.api.plugin.testing.MojoTest;
-import org.apache.maven.api.plugin.testing.stubs.ArtifactStub;
+import org.apache.maven.api.plugin.testing.stubs.ProducedArtifactStub;
 import org.apache.maven.api.plugin.testing.stubs.ProjectStub;
 import org.apache.maven.api.plugin.testing.stubs.SessionMock;
 import org.apache.maven.api.services.ArtifactManager;
@@ -59,16 +52,12 @@ import org.apache.maven.api.services.ProjectManager;
 import org.apache.maven.api.services.ToolchainManager;
 import org.apache.maven.internal.impl.DefaultMessageBuilderFactory;
 import org.apache.maven.internal.impl.InternalSession;
-import org.apache.maven.plugin.compiler.stubs.CompilerManagerStub;
-import org.codehaus.plexus.languages.java.version.JavaVersion;
+import org.apache.maven.plugin.compiler.stubs.CompilerStub;
 import org.junit.jupiter.api.Test;
 
-import static org.apache.maven.api.plugin.testing.MojoExtension.getBasedir;
-import static org.apache.maven.api.plugin.testing.MojoExtension.getVariableValueFromObject;
-import static org.apache.maven.api.plugin.testing.MojoExtension.setVariableValueToObject;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -91,363 +80,308 @@ public class CompilerMojoTestCase {
     private Session session;
 
     /**
-     * tests the ability of the plugin to compile a basic file
+     * Verifies that the given output file exists.
+     *
+     * @param mojo the tested mojo
+     * @param first the first path element
+     * @param more the other path elements, if any
+     */
+    private static void assertOutputFileExists(AbstractCompilerMojo mojo, String first, String... more) {
+        Path file = mojo.getOutputDirectory().resolve(Path.of(first, more));
+        assertTrue(Files.isRegularFile(file), () -> "File not found: " + file);
+    }
+
+    /**
+     * Verifies that the given output file does not exist.
+     *
+     * @param mojo the tested mojo
+     * @param first the first path element
+     * @param more the other path elements, if any
+     */
+    private static void assertOutputFileDoesNotExist(AbstractCompilerMojo mojo, String first, String... more) {
+        Path file = mojo.getOutputDirectory().resolve(Path.of(first, more));
+        assertFalse(Files.exists(file), () -> "File should not exist: " + file);
+    }
+
+    /**
+     * Tests the ability of the plugin to compile a basic file.
+     * This test does not declare a Java release version. Therefore, a warning should be emitted.
      */
     @Test
     @Basedir("${basedir}/target/test-classes/unit/compiler-basic-test")
     public void testCompilerBasic(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo,
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo,
             @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
                     @MojoParameter(name = "compileSourceRoots", value = "${project.basedir}/src/test/java")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/testCompile")
-                    TestCompilerMojo testCompileMojo)
-            throws Exception {
-        Log log = setMockLogger(compileMojo);
+                    TestCompilerMojo testCompileMojo) {
 
-        setVariableValueToObject(compileMojo, "targetOrReleaseSet", Boolean.FALSE);
-        execute(compileMojo);
-
-        verify(log).warn(startsWith("No explicit value set for target or release!"));
-
-        Path testClass = compileMojo.getOutputDirectory().resolve("foo/TestCompile0.class");
-        assertTrue(Files.exists(testClass));
-        Artifact projectArtifact = (Artifact) getVariableValueFromObject(compileMojo, "projectArtifact");
-        assertNotNull(
-                session.getArtifactPath(projectArtifact).orElse(null),
+        Log log = mock(Log.class);
+        compileMojo.logger = log;
+        compileMojo.execute();
+        verify(log).warn(startsWith("No explicit value set for --release or --target."));
+        assertOutputFileExists(compileMojo, "foo", "TestCompile0.class");
+        assertTrue(
+                session.getArtifactPath(compileMojo.projectArtifact).isPresent(),
                 "MCOMPILER-94: artifact file should only be null if there is nothing to compile");
 
-        execute(testCompileMojo);
-
-        testClass = testCompileMojo.getOutputDirectory().resolve("foo/TestCompile0Test.class");
-        assertTrue(Files.exists(testClass));
-    }
-
-    @Test
-    @Basedir("${basedir}/target/test-classes/unit/compiler-basic-sourcetarget")
-    public void testCompilerBasicSourceTarget(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo)
-            throws Exception {
-        Log log = setMockLogger(compileMojo);
-
-        execute(compileMojo);
-
-        verify(log, never()).warn(startsWith("No explicit value set for target or release!"));
+        testCompileMojo.execute();
+        assertOutputFileExists(testCompileMojo, "foo", "TestCompile0Test.class");
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestCompile0Test.class");
     }
 
     /**
-     * tests the ability of the plugin to respond to empty source
+     * A project with a source and target version specified.
+     * No warning should be logged.
+     */
+    @Test
+    @Basedir("${basedir}/target/test-classes/unit/compiler-basic-sourcetarget")
+    public void testCompilerBasicSourceTarget(
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo) {
+
+        Log log = mock(Log.class);
+        compileMojo.logger = log;
+        compileMojo.execute();
+        verify(log, never()).warn(startsWith("No explicit value set for --release or --target."));
+    }
+
+    /**
+     * Tests the ability of the plugin to respond to empty source.
      */
     @Test
     @Basedir("${basedir}/target/test-classes/unit/compiler-empty-source-test")
     public void testCompilerEmptySource(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo,
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo,
             @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
                     @MojoParameter(name = "compileSourceRoots", value = "${basedir}/src/test/java")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/testCompile")
-                    TestCompilerMojo testCompileMojo)
-            throws Exception {
-        execute(compileMojo);
+                    TestCompilerMojo testCompileMojo) {
 
+        compileMojo.execute();
         assertFalse(Files.exists(compileMojo.getOutputDirectory()));
-        Artifact projectArtifact = (Artifact) getVariableValueFromObject(compileMojo, "projectArtifact");
         assertNull(
-                session.getArtifactPath(projectArtifact).orElse(null),
+                session.getArtifactPath(compileMojo.projectArtifact).orElse(null),
                 "MCOMPILER-94: artifact file should be null if there is nothing to compile");
 
-        execute(testCompileMojo);
-
+        testCompileMojo.execute();
         assertFalse(Files.exists(testCompileMojo.getOutputDirectory()));
     }
 
     /**
-     * tests the ability of the plugin to respond to includes and excludes correctly
+     * Tests the ability of the plugin to respond to includes and excludes correctly.
      */
     @Test
     @Basedir("${basedir}/target/test-classes/unit/compiler-includes-excludes-test")
     public void testCompilerIncludesExcludes(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo,
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo,
             @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
                     @MojoParameter(name = "compileSourceRoots", value = "${project.basedir}/src/test/java")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/testCompile")
-                    TestCompilerMojo testCompileMojo)
-            throws Exception {
-        Set<String> includes = new HashSet<>();
-        includes.add("**/TestCompile4*.java");
-        setVariableValueToObject(compileMojo, "includes", includes);
+                    TestCompilerMojo testCompileMojo) {
 
-        Set<String> excludes = new HashSet<>();
-        excludes.add("**/TestCompile2*.java");
-        excludes.add("**/TestCompile3*.java");
-        setVariableValueToObject(compileMojo, "excludes", excludes);
+        compileMojo.execute();
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestCompile2.class");
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestCompile3.class");
+        assertOutputFileExists(compileMojo, "foo", "TestCompile4.class");
 
-        execute(compileMojo);
-
-        Path testClass = compileMojo.getOutputDirectory().resolve("foo/TestCompile2.class");
-        assertFalse(Files.exists(testClass));
-
-        testClass = compileMojo.getOutputDirectory().resolve("foo/TestCompile3.class");
-        assertFalse(Files.exists(testClass));
-
-        testClass = compileMojo.getOutputDirectory().resolve("foo/TestCompile4.class");
-        assertTrue(Files.exists(testClass));
-
-        setVariableValueToObject(testCompileMojo, "testIncludes", includes);
-        setVariableValueToObject(testCompileMojo, "testExcludes", excludes);
-
-        execute(testCompileMojo);
-
-        testClass = testCompileMojo.getOutputDirectory().resolve("foo/TestCompile2TestCase.class");
-        assertFalse(Files.exists(testClass));
-
-        testClass = testCompileMojo.getOutputDirectory().resolve("foo/TestCompile3TestCase.class");
-        assertFalse(Files.exists(testClass));
-
-        testClass = testCompileMojo.getOutputDirectory().resolve("foo/TestCompile4TestCase.class");
-        assertTrue(Files.exists(testClass));
+        testCompileMojo.execute();
+        assertOutputFileDoesNotExist(testCompileMojo, "foo", "TestCompile2TestCase.class");
+        assertOutputFileDoesNotExist(testCompileMojo, "foo", "TestCompile3TestCase.class");
+        assertOutputFileExists(testCompileMojo, "foo", "TestCompile4TestCase.class");
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestCompile4TestCase.class");
     }
 
     /**
-     * tests the ability of the plugin to fork and successfully compile
+     * Tests the ability of the plugin to fork and successfully compile.
      */
     @Test
     @Basedir("${basedir}/target/test-classes/unit/compiler-fork-test")
     public void testCompilerFork(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo,
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo,
             @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
                     @MojoParameter(name = "compileSourceRoots", value = "${project.basedir}/src/test/java")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/testCompile")
-                    TestCompilerMojo testCompileMojo)
-            throws Exception {
-        // JAVA_HOME doesn't have to be on the PATH.
-        setVariableValueToObject(
-                compileMojo, "executable", new File(System.getenv("JAVA_HOME"), "bin/javac").getPath());
-
-        execute(compileMojo);
-
-        Path testClass = compileMojo.getOutputDirectory().resolve("foo/TestCompile1.class");
-        assertTrue(Files.exists(testClass));
+                    TestCompilerMojo testCompileMojo) {
 
         // JAVA_HOME doesn't have to be on the PATH.
-        setVariableValueToObject(
-                testCompileMojo, "executable", new File(System.getenv("JAVA_HOME"), "bin/javac").getPath());
-
-        execute(testCompileMojo);
-
-        testClass = testCompileMojo.getOutputDirectory().resolve("foo/TestCompile1TestCase.class");
-        assertTrue(Files.exists(testClass));
-    }
-
-    @Test
-    @Basedir("${basedir}/target/test-classes/unit/compiler-one-output-file-test")
-    public void testOneOutputFileForAllInput(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo,
-            @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/testCompile")
-                    TestCompilerMojo testCompileMojo)
-            throws Exception {
-        setVariableValueToObject(compileMojo, "compilerManager", new CompilerManagerStub());
-
-        execute(compileMojo);
-
-        Path testClass = compileMojo.getOutputDirectory().resolve("compiled.class");
-        assertTrue(Files.exists(testClass));
-
-        setVariableValueToObject(testCompileMojo, "compilerManager", new CompilerManagerStub());
-
-        setVariableValueToObject(
-                testCompileMojo,
-                "compileSourceRoots",
-                Collections.singletonList(
-                        Paths.get(getBasedir(), "src/test/java").toString()));
-        execute(testCompileMojo);
-
-        testClass = testCompileMojo.getOutputDirectory().resolve("compiled.class");
-        assertTrue(Files.exists(testClass));
-    }
-
-    @Test
-    @Basedir("${basedir}/target/test-classes/unit/compiler-args-test")
-    public void testCompilerArgs(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo)
-            throws Exception {
-        setVariableValueToObject(compileMojo, "compilerManager", new CompilerManagerStub());
-
-        execute(compileMojo);
-
-        Path testClass = compileMojo.getOutputDirectory().resolve("compiled.class");
-        assertTrue(Files.exists(testClass));
-        assertEquals(
-                Arrays.asList("key1=value1", "-Xlint", "-my&special:param-with+chars/not>allowed_in_XML_element_names"),
-                compileMojo.compilerArgs);
-    }
-
-    @Test
-    @Basedir("${basedir}/target/test-classes/unit/compiler-implicit-test")
-    public void testImplicitFlagNone(
-            @InjectMojo(goal = "compile", pom = "plugin-config-none.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo)
-            throws Exception {
-        assertEquals("none", compileMojo.getImplicit());
-    }
-
-    @Test
-    @Basedir("${basedir}/target/test-classes/unit/compiler-implicit-test")
-    public void testImplicitFlagNotSet(
-            @InjectMojo(goal = "compile", pom = "plugin-config-not-set.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo)
-            throws Exception {
-        assertNull(compileMojo.getImplicit());
-    }
-
-    @Test
-    @Basedir("${basedir}/target/test-classes/unit/compiler-one-output-file-test2")
-    public void testOneOutputFileForAllInput2(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo,
-            @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/testCompile")
-                    TestCompilerMojo testCompileMojo)
-            throws Exception {
-        setVariableValueToObject(compileMojo, "compilerManager", new CompilerManagerStub());
-
-        Set<String> includes = new HashSet<>();
-        includes.add("**/TestCompile4*.java");
-        setVariableValueToObject(compileMojo, "includes", includes);
-
-        Set<String> excludes = new HashSet<>();
-        excludes.add("**/TestCompile2*.java");
-        excludes.add("**/TestCompile3*.java");
-        setVariableValueToObject(compileMojo, "excludes", excludes);
-
-        execute(compileMojo);
-
-        Path testClass = compileMojo.getOutputDirectory().resolve("compiled.class");
-        assertTrue(Files.exists(testClass));
-
-        setVariableValueToObject(testCompileMojo, "compilerManager", new CompilerManagerStub());
-        setVariableValueToObject(testCompileMojo, "testIncludes", includes);
-        setVariableValueToObject(testCompileMojo, "testExcludes", excludes);
-
-        setVariableValueToObject(
-                testCompileMojo,
-                "compileSourceRoots",
-                Collections.singletonList(
-                        Paths.get(getBasedir(), "src/test/java").toString()));
-        execute(testCompileMojo);
-
-        testClass = testCompileMojo.getOutputDirectory().resolve("compiled.class");
-        assertTrue(Files.exists(testClass));
-    }
-
-    @Test
-    @Basedir("${basedir}/target/test-classes/unit/compiler-fail-test")
-    public void testCompileFailure(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo)
-            throws Exception {
-        setVariableValueToObject(compileMojo, "compilerManager", new CompilerManagerStub(true));
-
-        assertThrows(CompilationFailureException.class, compileMojo::execute, "Should throw an exception");
-    }
-
-    @Test
-    @Basedir("${basedir}/target/test-classes/unit/compiler-failonerror-test")
-    public void testCompileFailOnError(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo)
-            throws Exception {
-        setVariableValueToObject(compileMojo, "compilerManager", new CompilerManagerStub(true));
-
-        try {
-            execute(compileMojo);
-            assertTrue(true);
-        } catch (CompilationFailureException e) {
-            fail("The compilation error should have been consumed because failOnError = false");
+        String javaHome = System.getenv("JAVA_HOME");
+        if (javaHome != null) {
+            String command = new File(javaHome, "bin/javac").getPath();
+            compileMojo.executable = command;
+            testCompileMojo.executable = command;
         }
+        compileMojo.execute();
+        assertOutputFileExists(compileMojo, "foo", "TestCompile1.class");
+
+        testCompileMojo.execute();
+        assertOutputFileExists(testCompileMojo, "foo", "TestCompile1TestCase.class");
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestCompile1TestCase.class");
     }
 
     /**
-     * Tests that setting 'skipMain' to true skips compilation of the main Java source files, but that test Java source
-     * files are still compiled.
+     * Tests the use of a custom compiler.
+     * The dummy compiler used in this test generates only one file, despite having more than one source.
+     */
+    @Test
+    @Basedir("${basedir}/target/test-classes/unit/compiler-one-output-file-test")
+    public void testOneOutputFileForAllInput(
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo,
+            @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
+                    @MojoParameter(name = "compileSourceRoots", value = "${project.basedir}/src/test/java")
+                    TestCompilerMojo testCompileMojo) {
+
+        assertEquals(CompilerStub.COMPILER_ID, compileMojo.compilerId);
+        compileMojo.execute();
+        assertOutputFileExists(compileMojo, CompilerStub.OUTPUT_FILE);
+
+        assertEquals(CompilerStub.COMPILER_ID, testCompileMojo.compilerId);
+        testCompileMojo.execute();
+        assertOutputFileExists(testCompileMojo, CompilerStub.OUTPUT_FILE);
+    }
+
+    /**
+     * Verifies that the options in the {@code <compilerArgs>} elements are given to the compiler.
+     */
+    @Test
+    @Basedir("${basedir}/target/test-classes/unit/compiler-args-test")
+    public void testCompilerArgs(@InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo) {
+
+        assertEquals(CompilerStub.COMPILER_ID, compileMojo.compilerId);
+        compileMojo.execute();
+
+        assertOutputFileExists(compileMojo, CompilerStub.OUTPUT_FILE);
+        assertArrayEquals(
+                new String[] {"key1=value1", "-Xlint", "-my&special:param-with+chars/not>allowed_in_XML_element_names"},
+                compileMojo.compilerArgs.toArray(String[]::new));
+
+        List<String> options = CompilerStub.getOptions();
+        assertArrayEquals(
+                new String[] {
+                    "--module-version", // Added by the plugin
+                    "1.0-SNAPSHOT",
+                    "key1=value1", // Specified in <compilerArgs>
+                    "-Xlint",
+                    "-my&special:param-with+chars/not>allowed_in_XML_element_names",
+                    "param", // Specified in <compilerArgument>
+                    "value"
+                },
+                options.toArray(String[]::new));
+    }
+
+    /**
+     * Tests the {@code <implicit>} option when set to "none".
+     */
+    @Test
+    @Basedir("${basedir}/target/test-classes/unit/compiler-implicit-test")
+    public void testImplicitFlagNone(
+            @InjectMojo(goal = "compile", pom = "plugin-config-none.xml") CompilerMojo compileMojo) {
+
+        assertEquals("none", compileMojo.implicit);
+        compileMojo.execute();
+    }
+
+    /**
+     * Tests the {@code <implicit>} option when not set.
+     */
+    @Test
+    @Basedir("${basedir}/target/test-classes/unit/compiler-implicit-test")
+    public void testImplicitFlagNotSet(
+            @InjectMojo(goal = "compile", pom = "plugin-config-not-set.xml") CompilerMojo compileMojo) {
+
+        assertNull(compileMojo.implicit);
+        compileMojo.execute();
+    }
+
+    /**
+     * Tests the compilation of a project having a {@code module-info.java} file, together with its tests.
+     * The compilation of tests requires a {@code --patch-module} option, otherwise compilation will fail.
+     */
+    @Test
+    @Basedir("${basedir}/target/test-classes/unit/compiler-modular-project")
+    public void testModularProject(
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo,
+            @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
+                    @MojoParameter(name = "compileSourceRoots", value = "${project.basedir}/src/test/java")
+                    TestCompilerMojo testCompileMojo) {
+
+        compileMojo.execute();
+        assertOutputFileExists(compileMojo, SourceDirectory.MODULE_INFO + SourceDirectory.CLASS_FILE_SUFFIX);
+        assertOutputFileExists(compileMojo, "foo", "TestModular.class");
+
+        testCompileMojo.execute();
+        assertOutputFileExists(testCompileMojo, "foo", "TestModularTestCase.class");
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestModularTestCase.class");
+    }
+
+    /**
+     * Tests a compilation task which is expected to fail.
+     */
+    @Test
+    @Basedir("${basedir}/target/test-classes/unit/compiler-fail-test")
+    public void testCompileFailure(@InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo) {
+        assertThrows(CompilationFailureException.class, compileMojo::execute, "Should throw an exception");
+        assertOutputFileExists(compileMojo, "..", "javac.args"); // Command-line that user can execute.
+    }
+
+    /**
+     * Tests a compilation task which is expected to fail, but where test failure are ignored.
+     */
+    @Test
+    @Basedir("${basedir}/target/test-classes/unit/compiler-failonerror-test")
+    public void testCompileFailOnError(
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo) {
+
+        try {
+            compileMojo.execute();
+        } catch (CompilationFailureException e) {
+            fail("The compilation error should have been consumed because failOnError = false");
+        }
+        assertOutputFileExists(compileMojo, "..", "javac.args"); // Command-line that user can execute.
+    }
+
+    /**
+     * Tests that setting {@code skipMain} to true skips compilation of the main Java source files,
+     * but that test Java source files are still compiled.
      */
     @Test
     @Basedir("${basedir}/target/test-classes/unit/compiler-skip-main")
     public void testCompileSkipMain(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo,
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo,
             @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/testCompile")
-                    TestCompilerMojo testCompileMojo)
-            throws Exception {
-        setVariableValueToObject(compileMojo, "skipMain", true);
-        execute(compileMojo);
-        Path testClass = compileMojo.getOutputDirectory().resolve("foo/TestSkipMainCompile0.class");
-        assertFalse(Files.exists(testClass));
+                    @MojoParameter(name = "compileSourceRoots", value = "${project.basedir}/src/test/java")
+                    TestCompilerMojo testCompileMojo) {
 
-        setVariableValueToObject(
-                testCompileMojo,
-                "compileSourceRoots",
-                Collections.singletonList(
-                        Paths.get(getBasedir(), "src/test/java").toString()));
-        execute(testCompileMojo);
-        testClass = testCompileMojo.getOutputDirectory().resolve("foo/TestSkipMainCompile0Test.class");
-        assertTrue(Files.exists(testClass));
+        compileMojo.skipMain = true;
+        compileMojo.execute();
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestSkipMainCompile0.class");
+
+        testCompileMojo.execute();
+        assertOutputFileExists(testCompileMojo, "foo", "TestSkipMainCompile0Test.class");
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestSkipMainCompile0Test.class");
     }
 
     /**
-     * Tests that setting 'skip' to true skips compilation of the test Java source files, but that main Java source
-     * files are still compiled.
+     * Tests that setting {@code skip} to true skips compilation of the test Java source files,
+     * but that main Java source files are still compiled.
      */
     @Test
     @Basedir("${basedir}/target/test-classes/unit/compiler-skip-test")
     public void testCompileSkipTest(
-            @InjectMojo(goal = "compile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/compile")
-                    CompilerMojo compileMojo,
+            @InjectMojo(goal = "compile", pom = "plugin-config.xml") CompilerMojo compileMojo,
             @InjectMojo(goal = "testCompile", pom = "plugin-config.xml")
-                    @MojoParameter(name = "mojoStatusPath", value = "maven-status/testCompile")
-                    TestCompilerMojo testCompileMojo)
-            throws Exception {
-        execute(compileMojo);
-        Path testClass = compileMojo.getOutputDirectory().resolve("foo/TestSkipTestCompile0.class");
-        assertTrue(Files.exists(testClass));
+                    @MojoParameter(name = "compileSourceRoots", value = "${project.basedir}/src/test/java")
+                    TestCompilerMojo testCompileMojo) {
 
-        setVariableValueToObject(testCompileMojo, "skip", true);
-        setVariableValueToObject(
-                testCompileMojo,
-                "compileSourceRoots",
-                Collections.singletonList(
-                        Paths.get(getBasedir(), "src/test/java").toString()));
-        execute(testCompileMojo);
-        testClass = testCompileMojo.getOutputDirectory().resolve("foo/TestSkipTestCompile0Test.class");
-        assertFalse(Files.exists(testClass));
+        compileMojo.execute();
+        assertOutputFileExists(compileMojo, "foo/TestSkipTestCompile0.class");
+
+        testCompileMojo.skip = true;
+        testCompileMojo.execute();
+        assertOutputFileDoesNotExist(testCompileMojo, "foo", "TestSkipTestCompile0Test.class");
+        assertOutputFileDoesNotExist(compileMojo, "foo", "TestSkipTestCompile0Test.class");
     }
 
     @Provides
     @Singleton
     @SuppressWarnings("unused")
     private static InternalSession createSession() {
-        InternalSession session = SessionMock.getMockSession(getBasedir() + LOCAL_REPO);
+        InternalSession session = SessionMock.getMockSession(MojoExtension.getBasedir() + LOCAL_REPO);
 
         ToolchainManager toolchainManager = mock(ToolchainManager.class);
         doReturn(toolchainManager).when(session).getService(ToolchainManager.class);
@@ -456,29 +390,13 @@ public class CompilerMojoTestCase {
                 .when(session)
                 .getStartTime();
 
-        Artifact junit = new ArtifactStub("junit", "junit", null, "3.8.1", "jar");
+        var junit = new ProducedArtifactStub("junit", "junit", null, "3.8.1", "jar");
 
         MessageBuilderFactory messageBuilderFactory = new DefaultMessageBuilderFactory();
         doReturn(messageBuilderFactory).when(session).getService(MessageBuilderFactory.class);
 
-        String source = AbstractCompilerMojo.DEFAULT_SOURCE;
-        String target = AbstractCompilerMojo.DEFAULT_TARGET;
-        String javaSpec = System.getProperty("java.specification.version");
-        // It is needed to set target/source to JDK 7 for JDK12+ and JDK 8 for JDK17+
-        // because this is the lowest version which is supported by those JDK's.
-        // The default source/target "6" is not supported anymore.
-        if (JavaVersion.parse(javaSpec).isAtLeast("17")) {
-            source = "8";
-            target = "8";
-        } else if (JavaVersion.parse(javaSpec).isAtLeast("12")) {
-            source = "7";
-            target = "7";
-        }
-
         Map<String, String> props = new HashMap<>();
         props.put("basedir", MojoExtension.getBasedir());
-        props.put("maven.compiler.source", source);
-        props.put("maven.compiler.target", target);
         doReturn(props).when(session).getUserProperties();
 
         List<Path> artifacts = new ArrayList<>();
@@ -486,8 +404,14 @@ public class CompilerMojoTestCase {
             Path artifactFile;
             String localRepository = System.getProperty("localRepository");
             if (localRepository != null) {
-                artifactFile = Paths.get(
-                        localRepository, "org/junit/jupiter/junit-jupiter-api/5.10.2/junit-jupiter-api-5.10.2.jar");
+                artifactFile = Path.of(
+                        localRepository,
+                        "org",
+                        "junit",
+                        "jupiter",
+                        "junit-jupiter-api",
+                        "5.10.2",
+                        "junit-jupiter-api-5.10.2.jar");
             } else {
                 // for IDE
                 String junitURI = Test.class.getResource("Test.class").toURI().toString();
@@ -502,7 +426,7 @@ public class CompilerMojoTestCase {
         }
 
         ProjectManager projectManager = session.getService(ProjectManager.class);
-        doAnswer(iom -> Collections.emptyList()).when(session).resolveDependencies(any(), eq(PathScope.MAIN_COMPILE));
+        doAnswer(iom -> List.of()).when(session).resolveDependencies(any(), eq(PathScope.MAIN_COMPILE));
         doAnswer(iom -> artifacts).when(session).resolveDependencies(any(), eq(PathScope.TEST_COMPILE));
 
         return session;
@@ -513,7 +437,7 @@ public class CompilerMojoTestCase {
     @SuppressWarnings("unused")
     private static Project createProject() {
         ProjectStub stub = new ProjectStub();
-        ArtifactStub artifact = new ArtifactStub("myGroupId", "myArtifactId", null, "1.0-SNAPSHOT", "jar");
+        var artifact = new ProducedArtifactStub("myGroupId", "myArtifactId", null, "1.0-SNAPSHOT", "jar");
         stub.setMainArtifact(artifact);
         stub.setModel(Model.newBuilder()
                 .groupId(artifact.getGroupId())
@@ -526,144 +450,7 @@ public class CompilerMojoTestCase {
                         .testOutputDirectory(MojoExtension.getBasedir() + "/target/test-classes")
                         .build())
                 .build());
-        stub.setBasedir(Paths.get(MojoExtension.getBasedir()));
+        stub.setBasedir(Path.of(MojoExtension.getBasedir()));
         return stub;
     }
-
-    //    @Provides
-    //    @SuppressWarnings("unused")
-    //    ProjectManager createProjectManager(InternalSession session) {
-    //        return session.getService(ProjectManager.class);
-    //    }
-
-    //    @Provides
-    //    @SuppressWarnings("unused")
-    //    ArtifactManager createArtifactManager(InternalSession session) {
-    //        return session.getService(ArtifactManager.class);
-    //    }
-
-    private Log setMockLogger(AbstractCompilerMojo mojo) throws IllegalAccessException {
-        Log log = mock(Log.class);
-        setVariableValueToObject(mojo, "logger", log);
-        return log;
-    }
-
-    private static void execute(Mojo mojo) {
-        try {
-            mojo.execute();
-        } catch (CompilationFailureException e) {
-            throw new RuntimeException(e.getLongMessage(), e);
-        }
-    }
-
-    /*
-    private CompilerMojo getCompilerMojo( String pomXml )
-        throws Exception
-    {
-        File testPom = new File( getBasedir(), pomXml );
-
-        CompilerMojo mojo = (CompilerMojo) lookupMojo( "compile", testPom );
-
-        setVariableValueToObject( mojo, "projectArtifact", new ArtifactStub() );
-        setVariableValueToObject( mojo, "compilePath", Collections.EMPTY_LIST );
-        setVariableValueToObject( mojo, "session", getMockMavenSession() );
-        setVariableValueToObject( mojo, "project", getMockMavenProject() );
-        setVariableValueToObject( mojo, "mojoExecution", getMockMojoExecution() );
-        setVariableValueToObject( mojo, "source", source );
-        setVariableValueToObject( mojo, "target", target );
-
-        return mojo;
-    }
-
-    private TestCompilerMojo getTestCompilerMojo( CompilerMojo compilerMojo, String pomXml )
-        throws Exception
-    {
-        File testPom = new File( getBasedir(), pomXml );
-
-        TestCompilerMojo mojo = (TestCompilerMojo) lookupMojo( "testCompile", testPom );
-
-        setVariableValueToObject( mojo, "log", new DebugEnabledLog() );
-
-        File buildDir = (File) getVariableValueFromObject( compilerMojo, "buildDirectory" );
-        File testClassesDir = new File( buildDir, "test-classes" );
-        setVariableValueToObject( mojo, "outputDirectory", testClassesDir );
-
-        List<String> testClasspathList = new ArrayList<>();
-
-        Artifact junitArtifact = mock( Artifact.class );
-        ArtifactHandler handler = mock( ArtifactHandler.class );
-        when( handler.isAddedToClasspath() ).thenReturn( true );
-        when( junitArtifact.getArtifactHandler() ).thenReturn( handler );
-
-        File artifactFile;
-        String localRepository = System.getProperty( "localRepository" );
-        if ( localRepository != null )
-        {
-            artifactFile = new File( localRepository, "junit/junit/3.8.1/junit-3.8.1.jar" );
-        }
-        else
-        {
-            // for IDE
-            String junitURI = org.junit.Test.class.getResource( "Test.class" ).toURI().toString();
-            junitURI = junitURI.substring( "jar:".length(), junitURI.indexOf( '!' ) );
-            artifactFile = new File( URI.create( junitURI ) );
-        }
-        when ( junitArtifact.getFile() ).thenReturn( artifactFile );
-
-        testClasspathList.add( artifactFile.getAbsolutePath() );
-        testClasspathList.add( compilerMojo.getOutputDirectory().toString() );
-
-        String testSourceRoot = testPom.getParent() + "/src/test/java";
-        setVariableValueToObject( mojo, "compileSourceRoots", Collections.singletonList( testSourceRoot ) );
-
-        Project project = getMockMavenProject();
-        project.setFile( testPom );
-        project.addCompileSourceRoot("/src/main/java" );
-        project.setArtifacts( Collections.singleton( junitArtifact )  );
-        project.getBuild().setOutputDirectory( new File( buildDir, "classes" ).getAbsolutePath() );
-        setVariableValueToObject( mojo, "project", project );
-        setVariableValueToObject( mojo, "testPath", testClasspathList );
-        setVariableValueToObject( mojo, "session", getMockMavenSession() );
-        setVariableValueToObject( mojo, "mojoExecution", getMockMojoExecution() );
-        setVariableValueToObject( mojo, "source", source );
-        setVariableValueToObject( mojo, "target", target );
-
-        return mojo;
-    }
-
-
-    private MavenProject getMockMavenProject()
-    {
-        MavenProject mp = new MavenProject();
-        mp.getBuild().setDirectory( "target" );
-        mp.getBuild().setOutputDirectory( "target/classes" );
-        mp.getBuild().setSourceDirectory( "src/main/java" );
-        mp.getBuild().setTestOutputDirectory( "target/test-classes" );
-        return mp;
-    }
-
-    private MavenSession getMockMavenSession()
-    {
-        MavenSession session = mock( MavenSession.class );
-        // when( session.getPluginContext( isA(PluginDescriptor.class), isA(MavenProject.class) ) ).thenReturn(
-        // Collections.emptyMap() );
-        when( session.getCurrentProject() ).thenReturn( getMockMavenProject() );
-        return session;
-    }
-
-    private MojoExecution getMockMojoExecution()
-    {
-        MojoDescriptor md = new MojoDescriptor();
-        md.setGoal( "compile" );
-
-        MojoExecution me = new MojoExecution( md );
-
-        PluginDescriptor pd = new PluginDescriptor();
-        pd.setArtifactId( "maven-compiler-plugin" );
-        md.setPluginDescriptor( pd );
-
-        return me;
-    }
-     */
-
 }
